# objmc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
.github/workflows/: build.yml
objmc-cli/: Cargo.toml
objmc-cli/src/: cli.rs  main.rs
objmc-cli/src/config/: mod.rs
objmc-cli/src/config/convert/: animation.rs  input.rs  mod.rs  output.rs  settings.rs  transform.rs
src/: cli.rs  join.rs  lib.rs  main.rs
src/convert/: config.rs  mod.rs  model.rs  state.rs
src/convert/texture/: face_id_header.rs  mod.rs  settings.rs
src/convert/texture/property/: face_id.rs  mod.rs  position_data.rs  settings.rs  texture.rs  uv_data.rs  vertex_indexes.rs
