[package]
name = "objmc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "objmc"
path = "src/main.rs"

[dependencies]
image = "0.25.5"
objmc = { path = ".." }
clap = { version = "4.5.21", features = ["derive", "unstable-v5"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"